2005-08-29 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add support for ATmega164/324/644, contributed by Anatoly Sokolov.
	* configure.ac: add tests for the ATmega164/324/644 support.
	* devtools/gen-avr-lib-tree.sh: add support for ATmega164/324/644.
	* include/avr/io.h: (Ditto.)
	* include/avr/wdt.h: (Ditto.)
	* include/avr/iom164.h: new file.
	* include/avr/iom324.h: new file.
	* include/avr/iom644.h: new file.
	* include/avr/iomxx4.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for ATmega164/324/644.
	* doc/api/using-tools.dox: (Ditto.)

2005-08-28 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add support for ATtiny25/45/85, contributed by Anatoly Sokolov.
	* configure.ac: add tests for the ATtiny25/45/85 support.
	* devtools/gen-avr-lib-tree.sh: add support for ATtiny25/45/85.
	* include/avr/io.h: (Ditto.)
	* include/avr/wdt.h: (Ditto.)
	* include/avr/io.h: (Ditto.)
	* include/avr/iotn25.h: new file.
	* include/avr/iotn45.h: new file.
	* include/avr/iotn85.h: new file.
	* include/avr/iotnx5.h: new file.
	* include/avr/Makefile.am: include new files.
	* doc/api/main_page.dox: Document support for ATtiny25/45/85.
	* doc/api/using-tools.dox: (Ditto.)

2005-08-18 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Kai Klenovsek:
	* doc/api/tools-install.dox: enable DWARF-2 support for GCC.

2005-08-17 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/avr/io90pwmx.h: remove PORTxy definitions that are
	duplicated from avr/portpins.h.
	* libc/stdio/sscanf.c: fix warnings.
	* libc/stdio/sscanf_p.c: (Ditto.)
	* libc/stdlib/malloc.c: (Ditto.)
	* doc/api/Makefile.am: fix standalone build of demo app.

2005-08-16 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Add support for ATmega329/3290/649/6490, contributed by Anatoly
	Sokolov.
	* configure.ac: add new devices.
	* devtools/gen-avr-lib-tree.sh: (Ditto.)
	* include/avr/Makefile.am: add iom329.h/iom3290.h/iom649.h/iom6490.h.
	* include/avr/io.h: add new devices